SBVTestSuite/TestSuite/CompileTests/PCase/PCase38.stderr
PCase38.hs:15:14: error: [GHC-39584]
    " PCase38.hs:21:9: pCase: Wildcard patterns are not allowed in proof case-splits.
    " In the quasi-quotation:
        [pCase|Expr e of
        Zero      -> undefined
        Num _     -> undefined
        Var _     -> undefined
        Add _ _   -> undefined
        Let _ _ _ -> undefined
        _         -> undefined
      |]
   |
15 | t e = [pCase|Expr e of
   |              ^^^^^^^^^...

